--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "devDependencies": {
     "@capacitor/cli": "2.4.2",
     "@ionic/app-scripts": "3.2.4",
+    "@ionic/lab": "3.2.9",
     "typescript": "2.6.2"
   },
   "description": "An Ionic project"
